--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.0.4
 django-client-side-image-cropping==0.1.10
 django-phonenumber-field==6.1.0
 django-phonenumbers==1.0.1
+django-pwa==1.0.10
 django-storages==1.12.3
 gunicorn==20.1.0
 jmespath==0.10.0
